bump up netty version and add some jvm tweaks